...
        child: Column(
          children: [
            Row(
              children: [
                Expanded(
                  child: TextFormField(
                    key: const Key('search'),
                    controller: keywordController,
                    decoration: const InputDecoration(
                      icon: Icon(Icons.search),
                      filled: true,
                      labelText: 'Search',
                      border: InputBorder.none
                    ),
                  ),
                ),
                const SizedBox(width: 10),
                ElevatedButton(
                  key: const Key('search-button'),
                  onPressed: () {
                    FocusScope.of(context).unfocus();
                    Provider.of<RecipeProvider>(context, listen: false).searchRecipe(keywordController.text.trim());
                  },
                  child: const Text('Search'),
                ),
...
